trend -> pattern, text revision

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			To be eligible to participate, you MUST meet the following criteria:
 			<ol>
 			<li>Be 18 years of age or older.</li>
-			<li>be Fluent speaker of English.</li>
+			<li>Be fluent speaker of English.</li>
 			<li>Have not previously participated in this experiment.</li>
 			</ol>
 			<br>
@@ -201,7 +201,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			<li> During his visit to BC last weekend, a friend of yours had an "Aha" moment! </li>
 			<li> As he went from casino to casino, he noticed that slot machines from the same company behaved somewhat similarly. </li>
 			<li> He realized that the coins he could get by pressing the different options on a slot machine followed a certain pattern. </li>
-			<li> It was as if the companies preset the coins one could earn from each option to these trends before delivering it. </li>
+			<!-- <li> It was as if the companies preset the coins one could earn from each option to these Patterns before delivering it. </li> -->
 			</ul>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page5a','page4b')"; > Back </button>			   
@@ -210,19 +210,24 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 
 	<div id="page5b" style="display:none">
 		<br>
-			<p><b>Hmm...but what trends?</b></p>
+			<p><b>Hmm...but what patterns?</b></p>
 			<ul>
-			<li> He noted that all machines made by a company is preset to one of the two trends: </li>
-			<h5> 1. Rising/Falling Trend </h5>
-			<li> For machine from one company, he could get more and more (Left) or less and less (Right) BC coins as he went from key S (left-most) to key L (right-most) as shown below. </li>
-			<br> <img src="figs/LinNeg_LinPos.png" width="600" style="vertical-align: bottom" >
-			<!-- <br><img src="figs/LinPos1.png" width="280" style="vertical-align: bottom" > <img src="figs/LinNeg1.png" width="280" style="vertical-align: bottom" ><br>  -->
-			<li> Note that machines from this company could be rising in one casino and falling in the other but across casinos, all their machines (i.e. machines with the same color) will belong only to the rising/falling trend. </li>
-			<h5> 2. Alternating Trend </h5>
-			<li> For machines from the another company, he saw that every other option was highly rewarding so either keys (S, F, K) or (D, J, L) were more rewarding as shown below. </li>
-			<br> <img src="figs/PerOdd_PerEven.png" width="600" style="vertical-align: bottom" >
-			<!-- <br><img src="figs/PerEven1.png" width="280" style="vertical-align: bottom" > <img src="figs/PerOdd2.png" width="280" style="vertical-align: bottom" > <br> -->
-			<li> Again, whether a machine of this company is preset to (S, F, K) or (D, J, L) to be highly rewarding could change between casinos but all machines from this company belonged only to the alternating trend.</li>	
+			<li> He noted that all machines made by a company followed one of the two patterns: </li>
+			<h5> 1. Rising/Falling Pattern </h5>
+			<ul>
+				<li> For machines from one company, he could either get more coins as he went from key S to L (Left Figure) or less coins as he went from key S to L (Right Figure). </li>
+				<br> <img src="figs/LinNeg_LinPos.png" width="600" style="vertical-align: bottom" >
+				<!-- <br><img src="figs/LinPos1.png" width="280" style="vertical-align: bottom" > <img src="figs/LinNeg1.png" width="280" style="vertical-align: bottom" ><br>  -->
+				<li> Note that machines made by a company could be rising in one casino and falling in the other but all their machines (i.e. machines with the same color) across casinos will belong only to the rising/falling pattern. </li>
+			</ul>
+			<h5> 2. Alternating Pattern </h5>
+			<ul>
+				<li> For machines from the another company, he saw that every other option was highly rewarding so either keys (S, F, K) or (D, J, L) were more rewarding as shown below. </li>
+				<br> <img src="figs/PerOdd_PerEven.png" width="600" style="vertical-align: bottom" >
+				<!-- <br><img src="figs/PerEven1.png" width="280" style="vertical-align: bottom" > <img src="figs/PerOdd2.png" width="280" style="vertical-align: bottom" > <br> -->
+				<li> Again, whether a machine made by a company has options (S, F, K) or (D, J, L) as highly rewarding could change between casinos, but all machines from this company will belong only to the alternating pattern.</li>	
+			</ul>
+			<br>
 			<!-- <br><img src="figs/LinNeg1.png" width="300" ><br> -->
 			<!-- <li> Let us assume hypothetically that machines from Blue Lagoons followed Rising/Falling Trend </li>
 			<li> Then, the coins you caan get for the different options on blue machines can be either rising or falling and you can only know which of the two by playing against it.  </li>
@@ -235,13 +240,14 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 
 	<div id="page5c" style="display:none">
 		<br>
-			<p><b>Trends are not fixed?</b></p>
+			<p><b>Patterns are not fixed?</b></p>
 			<ul>
 			<h5> The degree of rise and fall are not the same in every casino. </h5>
-			<li> For example, you can see two different rising trends below. </li>
+			<li> Here is an example of how much coins you can earn for each option for rising pattern from two different casino. </li>
 			<br> <img src="figs/LinPos12.png" width="600" style="vertical-align: bottom" >
 			<!-- <br><img src="figs/LinPos1.png" width="280" style="vertical-align: bottom" > <img src="figs/LinPos2.png" width="280" style="vertical-align: bottom" ><br>  -->
-			<li> For example, you can see two different falling trends below. </li>
+			<li>  Here is an example of how much coins you can earn for each option for falling pattern from two different casino. </li>
+			<!-- <li> For example, you can see two different falling trends below. </li> -->
 			<br> <img src="figs/LinNeg1n2.png" width="600" style="vertical-align: bottom" >
 			<!-- <br><img src="figs/LinNeg1.png" width="280" style="vertical-align: bottom"  > <img src="figs/LinNeg2.png" width="280" style="vertical-align: bottom"  ><br>  -->
 			<!-- <li> Let us assume hypothetically that machines from Blue Lagoons now followed Alternate Trend </li>
@@ -254,13 +260,13 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 
 	<div id="page5d" style="display:none">
 		<br>
-			<p><b>Trends are not fixed?</b></p>
+			<p><b>Patterns are not fixed?</b></p>
 			<ul>
-			<h5> Same goes for alternating trends, they might not be as highly rewarding in every casino.</h5>
-			<li> For example, you can see two different (D, J, L) alternating trend below. </li>
+			<h5> Same goes for alternating patterns, they might not be as highly rewarding in every casino.</h5>
+			<li> For example, you can see two different (D, J, L) alternating pattern below. </li>
 			<br> <img src="figs/PerOdd12.png" width="600" style="vertical-align: bottom" >
 			<!-- <br><img src="figs/PerOdd2.png" width="280" style="vertical-align: bottom" > <img src="figs/PerOdd1.png" width="280" style="vertical-align: bottom" ><br> -->
-			<li> For example, you can see two different (S, F, K) alternating trend below. </li>
+			<li> For example, you can see two different (S, F, K) alternating pattern below. </li>
 			<br> <img src="figs/PerEven12.png" width="600" style="vertical-align: bottom" >
 			<!-- <br><img src="figs/PerEven1.png" width="280" style="vertical-align: bottom" > <img src="figs/PerEven2.png" width="280" style="vertical-align: bottom" ><br> -->
 			<!-- <li> Let us assume hypothetically that machines from Blue Lagoons now followed Alternate Trend </li>
@@ -276,8 +282,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 			<p><b>Your mission</b></p>
 			<ul>
-			<li> Unfortunately, your buddy went a little out of control that night, what happens in BC stays in BC. </li>
-			<li> Now, he only remembers the trends and does not recollect which trend belongs to which company. </li>
+			<li> Unfortunately, your buddy went a little out of control that night - what happens in BC stays in BC! </li>
+			<li> Now, he only remembers the patterns and does not recollect which pattern belongs to which company. </li>
 			<li> Good news is that if you can figure out this, you can end up leaving BC a rich person. </li>
 			<!-- <li> Remember, the trend followed by a slot machine i.e. Linear or Alternate remains same as you go from casino to casino. </li> -->
 			<!-- <li> After you visited all the casinos, you can exchange all the BC coins you have collected for real money. </li> -->
@@ -361,13 +367,13 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 				<input type="radio" name="q2"> I am not sure. <br>
 			</fieldset>
 			<fieldset style="float:left;width:400px;margin:5px">
-				Let us say a machine from GreenGeeks followed a rising trend in a casino, what trend will another machine from them follow in the next casino?<br>
+				Let us say a machine from GreenGeeks followed a rising pattern in a casino, what pattern will another machine from them follow in the next casino?<br>
 				<input type="radio" name="q3">  
-					Rising trend again.<br>
+					Rising pattern again.<br>
 				<input type="radio" name="q3" id="icheck3"> 
 					Either rising or falling, one needs to figure out which.<br>
 				<input type="radio" name="q3"> 
-					Falling trend for sure.<br>
+					Falling pattern for sure.<br>
 				<input type="radio" name="q3"> 
 					Either rising, falling or alternating, one needs to figure out which.<br>
 			</fieldset>
