--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		Each slot machine has several options that you can choose from to earn BC coins. <br>
 		Each option maps on to different keys on your keyboard. <br>
 		You can choose an option by pressing the corresponding key on your keyboard. <br>
-		Color of the options indicate the company it was made by. <br> 
+		The color of the options indicate which company made the slot machine. <br> 
 		It will be <strong style="color: #50BF00;"> green </strong> if made by Green Geeks as shown below:
 		<br><img src="figs/Green_arms.png" width="600" ><br>
 		or <strong style="color: #0090DF;"> blue </strong> if made by Blue Lagoons as shown below: 
@@ -188,13 +188,13 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<p style="font-size:120%; text-align: center;">
 		The number of BC coins you can get is different for the different keys of the slot machine. <br>
 		You have <strong> 5 chances </strong>  to try and find the most rewarding option for each slot machine. <br>
-		The earlier you find the most rewarding option for a given machine, the more BC coins you can earn from it. <br>
+		The earlier you find the most rewarding option, the more BC coins you can earn by repeatedly clicking it. <br>
 		As you feel motivated, you will play all the available slot machines in a casino before moving to the next casino. <br>
 		<!-- You will exchange the BC coins you earn for real money at the end of you stay in each casino. -->
 		You will exchange all the BC coins you earned across casinos for real money at the end of your adventure. <br>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page4b','page4a')"; > Back </button>			   
-		<button type="button" name="button"; onclick="clickStart('page4b','page5a')"; >Go to next page</button>
+		<button type="button" name="button"; onclick="clickStart('page4b','page5a')"; > Go to next page </button>
 		</p>
 	</div>
 
@@ -203,7 +203,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Shh....!</h2>
 		<p style="font-size:120%; text-align: center;">
-		During his visit to BC last weekend, a friend of yours had an <strong> "Aha"</strong> moment! <br>
+		During his visit to BC last weekend, a friend of yours had an insight. <br>
 		As he went from casino to casino, he noticed that slot machines from the same company behaved "somewhat" similarly. <br>
 		He realized that the coins he could earn from the different options followed a <strong> certain pattern. </strong> <br>
 		The pattern was similar amongst machines produced by a company and each company had their own pattern. <br>
@@ -211,7 +211,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<!--  It was as if the companies preset the coins one could earn from each option to these Patterns before delivering it. <br> -->
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page5a','page4b')"; > Back </button>			   
-		<button type="button" name="button"; onclick="clickStart('page5a','page5b')"; >Go to next page</button>
+		<button type="button" name="button"; onclick="clickStart('page5a','page5b')"; > Go to next page</button>
 		</p>
 	</div>
 
@@ -219,8 +219,9 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Hmm...but what patterns?</h2>
 		<p style="font-size:120%; text-align: center;">
-			He noted that machines from a company could follow one of the <strong> two </strong> patterns:  </p>
-		<h4 style="text-align: center;">1. Rising/Falling Pattern </h4>
+		<!-- He noted that machines from a company could follow one of the <strong> two </strong> patterns:  </p> -->
+		One company showed a...</p>
+		<h4 style="text-align: center;"> Rising/Falling Pattern </h4>
 		<p style="font-size:120%; text-align: center;">
 			He could either get more coins as he went from key S to L (Rising; top row) or less coins as he went from key S to L (Falling; bottom row). <br>
 			<img src="figs/RiseNFall.png" width="600" style="vertical-align: bottom" > <br>	
@@ -234,7 +235,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page5c" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Hmm...but what patterns?</h2>
-		<h4 style="text-align: center;">2. Alternating Pattern </h4>
+		<p style="font-size:120%; text-align: center;"> Other company showed an...</p>
+		<h4 style="text-align: center;"> Alternating Pattern </h4>
 		<p style="font-size:120%; text-align: center;">
 			He saw that every other option was highly rewarding so either keys (S, F, K; top row) or (D, J, L; bottom row) could be more rewarding. <br>
 			<img src="figs/Alternating.png" width="600" style="vertical-align: bottom" ><br>	
@@ -252,8 +254,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<h2 style="text-align: center;">Your mission</h2>
 		<p style="font-size:120%; text-align: center;">
 		Unfortunately, your buddy went a little out of control that night - what happens in BC stays in BC! <br>
-		Now, he only remembers the patterns but <b style="color:maroon;">does not recollect </b> which company produces machines of which pattern. <br>
-		Good news is that if you can figure out this, you can end up leaving BC a rich person just like him. <br>
+		Now, he only remembers the patterns but <b style="color:maroon;"> does not recollect </b> which company produces which pattern. <br>
+		Good news is that if you can figure out this out, you can earn a lot of coins and leave BC a rich person. <br>
 		Note that a company either only produces rising/falling machines, or it only produces alternating machines. <br>
 		<!-- <li> Remember, the trend followed by a slot machine i.e. Linear or Alternate remains same as you go from casino to casino. </li> -->
 		<!-- <li> After you visited all the casinos, you can exchange all the BC coins you have collected for real money. </li> -->
@@ -268,8 +270,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
 		<p style="font-size:120%; text-align: center;">			
-			Looks like the casino owners have caught on to us, they now want to challenge their visitors by making it harder to earn BC coins. <br><br>
-			<!-- They now want to challenge their visitors by making it harder to earn BC coins. <br> -->
+			The casino owners have recently noticed that a lot of people are doing well on the new slot machines. <br>
+			They now want to challenge their visitors. <br>
 			 <!-- as a test to see if people actually are exploiting the pattern individually -->
 			 So, once you finish playing against the two slot machines, they would connect the machines together and ask you to play against the connected slot machine. <br>
 			 The machines are connected such that pressing a button on one would result in pressing the <b>same button</b> on the other. <br>
@@ -277,7 +279,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			 <img src="figs/GW_buttons.png" width="600" ><br>
 			 The total coins you earn by choosing an option on the connected machine is the <b>sum</b> of the coins from the two slot machines. <br>
 			 <br>
-			 Essentially, you will be playing <strong> three </strong> different types of slot machines in each casino today. <br>
+			 Essentially, you will be playing <strong> three </strong> slot machines (green, blue and connected green-blue) in each casino today. <br>
 			 Hope you are up for the challenge! <br>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page7a','page6')"; > Back </button>
@@ -290,14 +292,14 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
 		<p style="font-size:120%; text-align: center;">			
-			Looks like the casino owners have caught on to us, they now want to challenge their visitors by making it harder to earn BC coins. <br><br>
-			<!-- they noticed that a lot of people were doing well on the new slot machines. <br> -->
+			The casino owners have recently noticed that a lot of people are doing well on the new slot machines. <br>
+			They now want to challenge their visitors. <br>
 			So, they connected the machines together and asked people to play against the connected slot machine instead. <br>
 			The machines were connected such that pressing a button on one would result in pressing the same button on the other. <br>
 			The options for such a connected machine will be <strong style="color: #50BF00;"> half-green </strong> and <strong style="color: #0090DF;"> half-blue </strong> as shown below. <br>
 			<img src="figs/GW_buttons.png" width="600" ><br>
 			The total coins you earn by choosing an option on such a machine is the <b>sum</b> of coins from the two slot machines. <br><br>
-			Essentially, you will be playing only <strong> one </strong> machine in each casino today. <br>
+			Essentially, you will be playing only <strong> one </strong> machine (connected green-blue) in each casino today. <br>
 			Hope you are up for the challenge!<br>
 		<br>			
 		<button type="button" name="button"; onclick="clickStart('page7b','page6')"; > Back </button>
