load new rewards

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			<br>
 			<br>
 	
-			<button type="button" name="button" id="buttonConsentForm" onclick="clickStart('page1','page8');">I consent to participate</button><br><br>
+			<button type="button" name="button" id="buttonConsentForm" onclick="clickStart('page1','page2');">I consent to participate</button><br><br>
 
     </div>  
 
@@ -273,7 +273,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
 		<p style="font-size:120%; text-align: center;">			
-			The casino owners recently noticed that a lot of people are doing well on the new slot machines. <br>
+			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			 <!-- as a test to see if people actually are exploiting the pattern individually -->
 			 So, once you finish playing against the two slot machines, they would connect the machines together and ask you to play against the connected slot machine. <br>
@@ -294,7 +294,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
 		<p style="font-size:120%; text-align: center;">			
-			The casino owners recently noticed that a lot of people are doing well on the new slot machines. <br>
+			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			So, they connected the machines together and asked people to play against the connected slot machine instead. <br>
 			The machines were connected such that pressing a button on one would result in pressing the same button on the other. <br>
