changes based on Ro's feedback

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page2" style="display:none">
 		<br>
 		<!-- <h2 style="text-align: center;">Welcome!</h2> -->
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 		<img src="figs/BanditCity.png"><br>
-		Today, you are going to be a gambler visiting the fictional town of <b>Bandit City (BC)</b>.<br>
-		BC is the place to be if you wish to immerse yourself in the world of gambling.<br>
-		Like any major gambling city, BC has several casinos lined up next to one another.<br>
+		Today, you are going to be a gambler visiting the fictional town of <b>Bandit City</b>, <i>BC</i> in short.<br>
+		Bandit City is the place to be if you wish to immerse yourself in the world of gambling.<br>
+		Like any major gambling city, Bandit City has several casinos lined up next to one another.<br>
 		As an experienced gambler, you like to visit all the casinos whenever you are in town and make some money.<br>
 		<!-- <ul>
 		<li>Today, you are going be a gambler visiting the fictional town of Bandit City (BC).</li>
@@ -153,9 +153,10 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page3" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Local News!</h2>
-		<p style="font-size:120%; text-align: center;">
-		To promote local businesses, casinos in BC recently decided to buy new slot machines from their local manufactures.<br>
-		So all casinos now have two new slot machines, one each from <i> Green Geeks </i> and <i> Blue Lagoons </i>.<br>
+		<p style="font-size:125%; text-align: center;">
+		<img src="figs/MAB.png" width="300"><br>
+		To promote local businesses, casinos in Bandit City recently decided to buy new slot machines from their local manufactures.<br>
+		So all casinos now have two new slot machines, one each from <i> Green Geeks </i> and <i> Blue Lagoons</i>.<br>
 		Let us take a look at these new machines.<br>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page3','page2')"; > Back </button>			   
@@ -167,7 +168,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page4a" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Slot Machines 2.0</h2>
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 		Each slot machine has several options that you can choose from to earn <b>BC coins</b>. <br>
 		Each option maps on to different keys on your keyboard.<br>
 		<!-- <br><img src="figs/White_arms.png" width="600" ><br> -->
@@ -188,7 +189,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page4b" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Slot Machines 2.0</h2>
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 		The number of BC coins you can get is different for the different keys of the slot machine. <br>
 		You have <strong> 5 chances </strong>  to try and find the most rewarding option for each slot machine. <br>
 		The earlier you find the most rewarding option, the more BC coins you can earn by <b>repeatedly pressing </b> it. <br>
@@ -205,46 +206,58 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page5a" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Shh....!</h2>
-		<p style="font-size:120%; text-align: center;">
-		During his visit to BC last weekend, a friend of yours had an insight. <br>
+		<p style="font-size:125%; text-align: center;">
+		During his visit to Bandit City last weekend, a friend of yours had an insight. <br>
 		As he went from casino to casino, he noticed that slot machines from the same company behaved <i>somewhat similarly</i>. <br>
 		He realized that the coins he could earn from the different options followed a <strong> certain pattern. </strong> <br>
-		The pattern was similar amongst machines produced by the same company and each company had its own pattern. <br>
+		The pattern was similar amongst machines produced by the same company and each company had its own distinct pattern. <br>
 		<!--  He earned a lot of money that night as soon as he started using this finding. <br> -->
 		<!--  It was as if the companies preset the coins one could earn from each option to these Patterns before delivering it. <br> -->
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page5a','page4b')"; > Back </button>			   
-		<button type="button" name="button"; onclick="clickStart('page5a','page5b')"; > Next</button>
+		<button type="button" name="button"; onclick="clickStart('page5a','pagehmm')"; > Next</button>
+		</p>
+	</div>
+
+	<div id="pagehmm" style="display:none">
+		<br>
+	<h2 style="text-align: center;">Hmm...but what patterns?</h2>
+		<p style="font-size:125%; text-align: center;">
+		<br>
+		<img src="figs/think.png" width="180"><br><br>
+		<button type="button" name="button"; onclick="clickStart('pagehmm','page5a')"; > Back </button>			   
+		<button type="button" name="button"; onclick="clickStart('pagehmm','page5b')"; > Next</button>
 		</p>
 	</div>
 
 	<div id="page5b" style="display:none">
 		<br>
-		<h2 style="text-align: center;">Hmm...but what patterns?</h2>
-		<p style="font-size:120%; text-align: center;">
+		<!-- <h2 style="text-align: center;">Hmm...but what patterns?</h2> -->
+		<p style="font-size:180%; text-align: center;">
 		<!-- He noted that machines from a company could follow one of the <strong> two </strong> patterns:  </p> -->
 		One company showed a...</p>
 		<h3 style="text-align: center;"> Rising/Falling Pattern </h3>
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 			He could either get more coins as he went from key S to L (Rising; top row) or fewer coins as he went from key S to L (Falling; bottom row). <br>
 			<img src="figs/RiseNFall.png" width="600" style="vertical-align: bottom" > <br>	
-			A machine from a company following rising/falling pattern could be rising in one casino and falling in the other. <br>	
+			A machine from a company following rising/falling pattern could be rising in one casino and falling in the other. <br>
+			The amount of rise or fall may vary from casino to casino. <br>	
 			<br>
-			<button type="button" name="button"; onclick="clickStart('page5b','page5a')"; > Back </button>			   
+			<button type="button" name="button"; onclick="clickStart('page5b','pagehmm')"; > Back </button>			   
 			<button type="button" name="button"; onclick="clickStart('page5b','page5c')"; >Next</button>
 		</p>
 	</div>
 
 	<div id="page5c" style="display:none">
 		<br>
-		<h2 style="text-align: center;">Hmm...but what patterns?</h2>
-		<p style="font-size:120%; text-align: center;"> Th other company showed an...</p>
+		<!-- <h2 style="text-align: center;">Hmm...but what patterns?</h2> -->
+		<p style="font-size:180%; text-align: center;"> Th other company showed an...</p>
 		<h3 style="text-align: center;"> Alternating Pattern </h3>
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 			He saw that every other option was highly rewarding so either keys (S, F, K; top row) or (D, J, L; bottom row) could be more rewarding. <br>
 			<img src="figs/Alternating.png" width="600" style="vertical-align: bottom" ><br>	
 			A machine from a company following the alternating pattern can either have options (S, F, K) or (D, J, L) to be highly rewarding.<br>
-			<!-- <li> Among the machines made by a single company, either options (S, F, K) or (D, J, L) could be highly rewarding but this company then can only produce machines with alternating pattern.</li>	 -->
+			The magnitude of the highly rewarding option may vary from casino to casino. <br>
 			<br>
 			<button type="button" name="button"; onclick="clickStart('page5c','page5b')"; > Back </button>			   
 			<button type="button" name="button"; onclick="clickStart('page5c','page6')"; >Next</button>
@@ -255,10 +268,10 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page6" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Your mission</h2>
-		<p style="font-size:120%; text-align: center;">
-		Unfortunately, your buddy went a little out of control that night - what happens in BC stays in BC! <br>
+		<p style="font-size:125%; text-align: center;">
+		Unfortunately, your buddy went a little out of control that night - what happens in Bandit City stays in Bandit City! <br>
 		Now, he only remembers the patterns but  does not recollect <b style="color:maroon;">which company produces which pattern</b>. <br>
-		The good news is that if you can figure this out, you can earn a lot of coins and leave BC a rich person. <br>
+		The good news is that if you can figure this out, you can earn a lot of coins and leave Bandit City a rich person. <br>
 		Note that a company either only produces rising/falling machines, or it only produces alternating machines. <br>
 		<!-- <li> Remember, the trend followed by a slot machine i.e. Linear or Alternate remains same as you go from casino to casino. </li> -->
 		<!-- <li> After you visited all the casinos, you can exchange all the BC coins you have collected for real money. </li> -->
@@ -272,7 +285,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page7a" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
-		<p style="font-size:120%; text-align: center;">			
+		<p style="font-size:125%; text-align: center;">			
 			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			 <!-- as a test to see if people actually are exploiting the pattern individually -->
@@ -280,8 +293,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			 The machines are connected such that pressing a button on one would result in pressing the <b>same button</b> on the other. <br>
 			 The options for such a connected machine will be <strong style="color: #50BF00;"> half-green </strong> and <strong style="color: #0090DF;"> half-blue </strong> as shown below. <br>
 			 <img src="figs/GW_buttons.png" width="600" ><br>
-			 The total coins you earn by choosing an option on the connected machine is the <b>sum</b> of the coins from the two slot machines. <br>
-			 Essentially, you will be playing <strong> three </strong> slot machines (green, blue, and connected green-blue) in each casino today. <br><br>
+			 The total coins you earn by choosing an option on the connected machine is the <b>sum</b> of the coins from the two slot machines. <br><br>
+			 Essentially, you will be playing <strong> three  slot machines </strong> (green, blue, and connected green-blue) in each casino today. <br>
 			 Hope you are up for the challenge! <br>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page7a','page6')"; > Back </button>
@@ -293,7 +306,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page7b" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Oh wait!</h2>
-		<p style="font-size:120%; text-align: center;">			
+		<p style="font-size:125%; text-align: center;">			
 			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			So, they connected the machines together and asked people to play against the connected slot machine instead. <br>
@@ -359,7 +372,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page9" style="display:none">
 		<br>
 		<h2 style="text-align: center;">Keyboard finger position</h2>
-		<p style="font-size:120%; text-align: center;">
+		<p style="font-size:125%; text-align: center;">
 		We kindly ask you to place your hands on the keyboard as shown in the picture below.<br>
 		Please use your left hand to select the options <b>S</b>, <b>D</b> or <b>F</b>. Use your right hand to select <b>J</b>, <b>K</b> or <b>L</b>.<br>
 		Please use your left index finger to select <b>F</b>, and your right index finger to select <b>J</b>, and so forth.<br>
@@ -451,9 +464,9 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<!-- renumeration -->
 	<div id="page12" style="display:none">
 		<h2 style="text-align: center;">Your performance and reward</h2>
-		<div id="result" style="text-align: center; font-size: 120%"> </div><br>
-		<div id="money" style="text-align: center; font-size: 120%"> </div><br>
-		<p style="font-size:120%; text-align: center;">
+		<div id="result" style="text-align: center; font-size: 125%"> </div><br>
+		<div id="money" style="text-align: center; font-size: 125%"> </div><br>
+		<p style="font-size:125%; text-align: center;">
 		Thank you very much for participating in our study.<br>
 		Your Mechanical Turk Password is:<br> <b>compbandits</b><br>
 		In case you have any questions, please contact us via our MTurk account or write an email to<br> <b>cpilab@tue.mpg.de</b>
